"$Id$"
Top of CVS tree:
------------------------------------------------------------------------------

Apply patch #1430279 (code-cleanup: const, static, etc) by Stefan Huehner.
---
Affected files: common/{client.c,client.h,commands.c,def-keys.h,external.h,
init.c,item-types.h,item.c,metaserver.c,misc.c,p_cmd.c,player.c,proto.h},
gtk/{config.c,gtkproto.h,gx11.c,help.c,inventory.c,keys.c,png.c,sdl.c,sound.c,
text.c,win32/soundsdef.h},
gtk-v2/src/{inventory.c,keys.c,magicmap.c,main.c,sdl.c,sound.c,stats.c},
pixmaps/{all.xpm,close.xpm,coin.xpm,crossfiretitle.xpm,hand.xpm,hand2.xpm,
lock.xpm,mag.xpm,nonmag.xpm,question.xpm,sign_east.xpm,sign_flat.xpm,
sign_west.xpm,skull.xpm,unlock.xpm}, sound-src/{alsa9.c,cfsndserv.c,common.c},
utils/mdk.sh, x11/{sound.c,x11.c,xutil.c}
Andreas Kirschbaum 2006-02-16

Apply patch #1429975 (patch to support port numbers in metaserver host names)
by Marc Lehmann.
---
common/metaserver.c: In metaserver_select() allow a port number in the server
   string.
Andreas Kirschbaum 2006-02-12

common/metaserver.c, common/metaserver.h: Make cached_servers_loaded static
   since it is not used elsewhere.
Andreas Kirschbaum 2006-02-12

gtk/inventory.c, gtk-v2/src/inventory.c, x11/x11.c: 
Make the message displayed for locked items more descriptive.
Brendan Lally 2005-02-09

Remove unscrollable single column resistances option from gcfclient. 
Change the setting name in the config file and convert old values.
Reduce MAX_BUTTONS to 33. Replace radio buttons with a single push button.
Remove legacy lighting save code. Remove SHOW_RESISTS, use NUM_RESISTS
instead (this reduces the blank space at the bottom of the resistances
window). Call resize_resistance_table from get_message_display, remove
duplicated code from the latter.
Affected files:
gtk/gx11.c, config.c
common/init.c
--
Remove coloured inventory and text options, as well as all supporting code
for them. Make text always print in colour. Remove special code for 